# kompagnon-algo

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  configure.sh  main.py  pyproject.toml  pytest.ini  render.yaml  requirements-test.txt  requirements.txt  sample.env  setup.py  start.sh  test.sh
.github/: dependabot.yml
.github/workflows/: PR Title Check.yml  auto-merge.yml  ci.yml  release.yml  semantic-release.yml
doc/: pr_body.md
scripts/: configure.sh
src/: __init__.py
src/algorithm/: README.md  config.py  main.py  matcher.py
src/api/: main.py  routes.py  schema.py
src/api/routes/: __init__.py  get_invalid.py  get_valid.py  match.py  put_journey.py  root.py  status.py
src/controller/: match_controller.py
src/db/: models.py  session.py
src/repository/: journey_repository.py
templates/: CHANGELOG.md.j2
tests/: __init__.py  conftest.py  test_get_invalid.py  test_get_valid.py  test_match.py  test_put_journey.py  test_root.py  test_routes.py  test_status.py
tests/algorithm/: test_config.py  test_main.py  test_matcher.py
tests/controller/: __init__.py  test_match_controller.py
tests/repository/: __init__.py  test_journey_repository.py
