[project]
name = "kompagnon-algo"
version = "0.1.0"
description = "Kompagnon Algorithm"
authors = [
    { name = "lgadrien" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "angular"
build_command = "python -m pip install build && python -m build"
upload_to_pypi = false
upload_to_release = true
